code review:  hide photo label, fix avatar settings alignment for family signup page, remove orange from photo placeholder text, change button words back to choose

--- a/curiositymachine/static/css/main.css
+++ b/curiositymachine/static/css/main.css
@@ -9833,6 +9833,8 @@ footer {
   flex-direction: row;
   align-items: flex-end;
   justify-content: center; }
+  .account-settings .avatar-settings label {
+    display: none; }
   .account-settings .avatar-settings img {
     width: 125px;
     height: 125px; }
@@ -9841,12 +9843,11 @@ footer {
     flex-direction: column;
     align-items: center; }
     .account-settings .avatar-settings .pickwidget input {
+      text-align: center;
       border: none;
       background-color: none;
       color: #ff7500;
       font-size: 0.8rem; }
-      .account-settings .avatar-settings .pickwidget input::placeholder {
-        color: #ff7500; }
       .account-settings .avatar-settings .pickwidget input:hover, .account-settings .avatar-settings .pickwidget input:focus {
         border: none; }
     .account-settings .avatar-settings .pickwidget .pickwidget-button {
@@ -10260,7 +10261,8 @@ footer {
     margin-left: 0.5em; }
 
 .family-member-card .avatar-settings {
-  flex-direction: column; }
+  flex-direction: column;
+  align-items: center; }
 
 .family-member-card hr {
   border-bottom: 3px solid #5bc2e7; }
